@@ -1,3 +1,14 @@
+2004-03-03  Todd Berman  <tberman@sevenl.net>
+
+	* src/AddIns/DisplayBindings/Gui/SourceEditor*:
+		Add ExecutingAt code.
+	* src/Main/Base/Services/DebuggingService.cs:
+		Add ExecutingAt support.
+	* build/AddIns/SharpDevelopCore.addin:
+		rearrange service order.
+	* build/data/resources/icons/Breakpoint.png,ExecutionMarker.png:
+		import miguel's badass icons
+	
 2004-03-03  Mike Kestner  <mkestner@ximian.com>
 
 	* Main/Base/Services/DebuggingService.cs : add some debugging info
